<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:background="@drawable/shape_result_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_expression"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />
        </HorizontalScrollView>


        <Button
            android:id="@+id/btn_remove_last"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/delete_last"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_interval"/>
    <Button
        android:id="@+id/btn_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_operation"/>
    <Button
        android:id="@+id/btn_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/result"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_result_area">

        <TextView
            android:id="@+id/result_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/input_expr"/>
    </ScrollView>


</LinearLayout>